--- a/pom.xml
+++ b/pom.xml
@@ -90,17 +90,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.7.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        https://mvnrepository.com/artifact/com.auth0/java-jwt
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.18.1</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>javax.persistence</groupId>
