--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.18.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
