--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.7.1</version>
         </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.thetransactioncompany/cors-filter -->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.10</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
